Fix channel link design on markdown page on mobile

--- a/ui/scss/component/_main.scss
+++ b/ui/scss/component/_main.scss
@@ -859,6 +859,9 @@ body {
         .channel-name {
           font-size: var(--font-large);
           color: var(--color-primary);
+          @media (max-width: $breakpoint-small) {
+            font-size: var(--font-base);
+          }
         }
       }
     }
